feat:修复新CGI错误